<resources>
    <string name="app_name">My Notes</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="example">Notes</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="sign_out">Sign out</string>
    <string name="note_title">Note Title</string>
    <string name="note_sub_title">Note Sub Title</string>
    <string name="note_desc">Enter Note Here</string>
    <string name="search">Search</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>