<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".DashboardActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_arrow_back_ios"
        android:id="@+id/imgBack"
        app:tint="@color/ColorLightBlack" />
    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_tick"
        app:tint="@color/ColorLightBlack" />

    <LinearLayout
        android:id="@+id/l0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imgBack"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <View
            android:layout_width="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:id="@+id/colorView"
            android:background="@color/ColorBlue"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/note_title"
            android:maxLines="1"
            android:background="@color/colorPrimary"
            android:inputType="text"
            android:fontFamily="@font/manrope_regular"
            android:ellipsize="end"
            android:textColorHint="@color/ColorGray"
            android:textColor="@color/ColorLightBlack"
            android:id="@+id/noteTitle"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDateTime"
        app:layout_constraintTop_toBottomOf="@+id/l0"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/ColorYellow"
        android:textSize="@dimen/_8sdp"
        android:fontFamily="@font/manrope_regular"
        />





    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvDateTime"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:hint="@string/note_sub_title"
            android:maxLines="2"
            android:textSize="@dimen/_12sdp"
            android:inputType="text"
            android:fontFamily="@font/manrope_regular"
            android:ellipsize="end"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/ColorGray"
            android:textColor="@color/ColorLightBlack"
            android:id="@+id/noteSubTitle"
            />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@drawable/ic_cursor"
        android:padding="@dimen/_10sdp"
        android:hint="@string/note_desc"
        android:maxLines="10"
        android:lines="6"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/l1"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/manrope_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        android:ellipsize="end"
        android:textColorHint="@color/ColorGray"
        android:textColor="@color/ColorLightBlack"
        android:id="@+id/noteDesc"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvWebUrl"
        android:paddingStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/ColorGreenNote"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/manrope_regular"
        app:layout_constraintTop_toBottomOf="@+id/noteDesc"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvWebUrl"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:background="@color/colorPrimary"
        android:id="@+id/layoutWebUrl"
        android:visibility="gone"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:hint="Enter Web Url"
            android:inputType="text"
            android:textSize="@dimen/_12sdp"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/manrope_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:ellipsize="end"
            android:text="http://"
            android:textColorHint="@color/ColorLightBlack"
            android:textColor="@color/ColorLightBlack"
            android:id="@+id/noteWebUrl"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_marginEnd="@dimen/_10sdp"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelBtn"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/ColorWhite"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/cancel"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/okayBtn"
                android:textColor="@color/ColorWhite"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/okay"/>



        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        >
        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            app:tint="@color/ColorLightBlack"
            android:src="@drawable/ic_baseline_expand_less"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>